client/src/components/Home/HomePage/Post/UserData/UserData.css
.user {
  display: flex;
  align-content: center;
  padding: 15px 0;
  height: 50px;
  background-color: white;
  color: #191414;
  border-top: 1px solid lightgray;
  border-left: 1px solid lightgray;
  border-right: 1px solid lightgray;
}

.user * {
  background-color: white;
}

.user__profileImg {
  padding-right: 15px;
  padding-left: 15px;
  background-color: white;
}

.user__username {
  display: flex;
  font-size: 32px;
  font-weight: 500;
  padding-top: 5px;
  width: 70%;
  justify-content: center;
}

.user__profileImg img {
  width: 50px;
  height: 50px;
  object-fit: cover;
  border-radius: 50%;
}

.user__profileImg__default,
.user__profileImg img:hover {
  cursor: pointer;
}

.user__profileImg__default {
  font-size: 60px !important;
  color: #191414;
}

